[gd_scene load_steps=6 format=2]

[ext_resource path="res://Kenney Blocks.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/gameover/GameOver.gd" type="Script" id=2]
[ext_resource path="res://images/pexels-simon-berger-1266810.jpg" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="VictoryScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 256 )
scale = Vector2( 0.369213, 0.369213 )
texture = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_right = -200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 880.0
margin_bottom = 720.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblVictory" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 880.0
margin_bottom = 374.0
custom_fonts/font = SubResource( 1 )
text = "Victory!"
align = 1

[node name="LblEscaped" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 378.0
margin_right = 880.0
margin_bottom = 424.0
custom_fonts/font = SubResource( 2 )
text = "You Escaped the Mine with Your Life"
align = 1

[node name="BtnAgain" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 428.0
margin_right = 880.0
margin_bottom = 448.0
text = "Play Again?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnMainMenu" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 452.0
margin_right = 880.0
margin_bottom = 472.0
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnQuit" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 476.0
margin_right = 880.0
margin_bottom = 496.0
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/BtnAgain" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BtnMainMenu" to="." method="_on_BtnMainMenu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BtnQuit" to="." method="_on_BtnQuit_pressed"]
